# Generated by Django 5.2.3 on 2025-08-13 13:24

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('properties', '0013_add_payment_authorization_fields'),
    ]

    operations = [
        migrations.AddField(
            model_name='propertybooking',
            name='agent_completion_time',
            field=models.DateTimeField(blank=True, help_text='When agent marked visit as complete', null=True),
        ),
        migrations.AddField(
            model_name='propertybooking',
            name='booking_deadline',
            field=models.DateTimeField(blank=True, help_text='Deadline for customer to book the property after visit completion', null=True),
        ),
        migrations.AddField(
            model_name='propertybooking',
            name='customer_completion_time',
            field=models.DateTimeField(blank=True, help_text='When customer marked visit as complete', null=True),
        ),
        migrations.AddField(
            model_name='propertybooking',
            name='is_eligible_for_booking',
            field=models.BooleanField(default=False, help_text='Whether this customer is eligible to book this property after visit completion'),
        ),
        migrations.AddField(
            model_name='propertybooking',
            name='visit_completed_at',
            field=models.DateTimeField(blank=True, help_text='When the visit was marked as completed', null=True),
        ),
        migrations.AddField(
            model_name='propertybooking',
            name='visit_completed_by_agent',
            field=models.BooleanField(default=False, help_text='Agent confirmed visit completion'),
        ),
        migrations.AddField(
            model_name='propertybooking',
            name='visit_completed_by_customer',
            field=models.BooleanField(default=False, help_text='Customer confirmed visit completion'),
        ),
        migrations.AddField(
            model_name='propertybooking',
            name='visit_completion_notes',
            field=models.TextField(blank=True, help_text='Notes about the visit completion'),
        ),
        migrations.AddField(
            model_name='propertybooking',
            name='visit_status',
            field=models.CharField(choices=[('scheduled', 'Scheduled'), ('completed', 'Completed'), ('cancelled', 'Cancelled'), ('no_show', 'No Show')], default='scheduled', help_text='Status of the visit for visit-type bookings', max_length=20),
        ),
        migrations.AlterField(
            model_name='propertybooking',
            name='status',
            field=models.CharField(choices=[('pending', 'Pending Verification'), ('confirmed', 'Confirmed'), ('rejected', 'Rejected'), ('cancelled', 'Cancelled'), ('completed', 'Completed'), ('visit_completed', 'Visit Completed')], default='pending', max_length=20),
        ),
    ]
